<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/item_inicio"
        android:title="@string/item_inicio"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_home"/>

    <item android:id="@+id/item_onosmatico"
        android:title="@string/item_onosmatico"
        android:orderInCategory="200"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_font_bigger"/>

    <item android:id="@+id/item_pesquisa"
        android:title="@string/item_pesquisa"
        android:orderInCategory="200"
        app:showAsAction="always"
        android:icon="@drawable/ic_search"/>

    <item android:id="@+id/item_equiv"
        android:title="@string/item_equiv"
        android:orderInCategory="400"
        app:showAsAction="never" />

    <item android:id="@+id/item_busca_equiv"
        android:title="@string/item_busca_equiv"
        android:orderInCategory="400"
        app:showAsAction="never" />

    <item android:id="@+id/item_about"
        android:title="@string/item_about"
        android:orderInCategory="400"
        app:showAsAction="never" />

    <item android:id="@+id/item_ajuda"
        android:title="@string/item_ajuda"
        android:orderInCategory="400"
        app:showAsAction="never" />

    <item android:id="@+id/item_sair"
        android:title="@string/item_sair"
        android:orderInCategory="500"
        app:showAsAction="never" />

</menu>